build/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-prod
  namespace: maxcloud-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-web-prod
  template:
    metadata:
      name: demo-web-prod
      labels:
        app: demo-web-prod
    spec:
      imagePullSecrets:
        - name: ali-ecr
      containers:
        - image: registry.cn-hongkong.aliyuncs.com/spotmax/demo-web-prod:v2.4.11.12
          name: demo-web-prod
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
              privileged: true
