build/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-prod
  namespace: demo-prod
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts:
        - demo.demo.com
      secretName: demo-secret
  rules:
    - host: demo.demo.com
      http:
        paths:
          - backend:
              service:
                name: demo-web-prod
                port:
                  number: 80
            path: /
            pathType: Prefix
